--- a/src/views/cadastro.html
+++ b/src/views/cadastro.html
@@ -13,19 +13,19 @@
         <div>
             <label for="matricula">Matrícula:</label>
             <input type="text" id="matricula" name="matricula" required>
-        </div>
+        </div><br><br>
         <div>
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" required>
-        </div>
+        </div><br><br>
         <div>
             <label for="turma">Turma:</label>
             <input type="text" id="turma" name="turma" required>
-        </div>
+        </div><br><br>
         <div>
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
-        </div>
+        </div><br><br>
         <div>
             <label for="genero">Gênero:</label>
             <select id="genero" name="genero">
