--- a/src/views/cadastro.html
+++ b/src/views/cadastro.html
@@ -29,17 +29,15 @@
         <div>
             <label for="genero">Gênero:</label>
             <select id="genero" name="genero">
-                <option value="masculino">Masculino</option>
-                <option value="feminino">Feminino</option>
-                <option value="outro">Outro</option>
-                <option value="prefiro_nao_dizer">Prefiro não dizer</option>
+                <option value="M">Masculino</option>
+                <option value="F">Feminino</option>
+                <option value="O">Outro</option>
             </select>
-        </div>
+        </div><br><br>
         <div>
             <input type="submit" value="Enviar">
         </div>
     </form>
         
 </body>
-
 </html>
